# AI-Analyst-Builder

./: README.md
AI_Analyst_Builder-Code/: .gitignore  BUILD_STATUS.yaml  CHANGELOG.md  CLAUDE.md  HISTORY.md  data_sources.yaml  pyproject.toml  requirements.txt
AI_Analyst_Builder-Code/.claude/: settings.local.json.example
AI_Analyst_Builder-Code/.github/: CODEOWNERS  SECURITY.md
AI_Analyst_Builder-Code/.knowledge/: README.md
AI_Analyst_Builder-Code/agents/: CONTRACT_TEMPLATE.md  INDEX.md  chart-maker.md  cohort-analysis.md  comms-drafter.md  data-explorer.md  deck-creator.md  descriptive-analytics.md  experiment-designer.md  hypothesis.md  narrative-coherence-reviewer.md  opportunity-sizer.md  overtime-trend.md  question-framing.md  root-cause-investigator.md  source-tieout.md  story-architect.md  storytelling.md  validation.md  visual-design-critic.md
AI_Analyst_Builder-Code/data-generation/: BUILD_SPEC.md  generate.py
AI_Analyst_Builder-Code/docs/: setup-guide.md  theming.md
AI_Analyst_Builder-Code/helpers/: business_context.py
AI_Analyst_Builder-Code/scripts/: check_imports.py  check_theme_sync.py  generate_theme_artifacts.py  lint_chart_colors.py  lint_wcag.py  setup.sh
AI_Analyst_Builder-Code/templates/: deck_skeleton.marp.md  marp_components.md
AI_Analyst_Builder-Code/tests/: conftest.py  test_archaeology_helpers.py  test_business_context.py  test_business_rules.py  test_business_validation.py  test_chart_palette.py  test_confidence_scoring.py  test_context_loader.py  test_data_helpers_v2.py  test_entity_resolver.py  test_file_helpers.py  (+16 more)
(+77 files in other folders)
